# penx

./: .dockerignore  .env  .env.example  .env.selft-hosted  .eslintrc.js  .eslintrc.json  .gitignore  .prettierrc  Dockerfile  Dockerfile.mysql  Dockerfile.web  README.md  components.json  contentlayer.config.ts  custom-types.ts  docker-compose.web.yaml  docker-compose.yaml  drizzle.config.ts  env.d.ts  index.d.ts  jsconfig.json  middleware.ts  next.config.js  next.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  publish.mjs  tailwind.config.js  tailwind.config.ts  tsconfig.json  turbo.json  wait-for-postgres.sh  withTheme.mjs  wrangler.toml.example
.changeset/: config.json
app/: DashboardProviders.tsx  Main.tsx  RainbowKitSiweProvider.tsx  layout.tsx  manifest.ts  not-found.tsx  providers.tsx  robots.ts  seo.tsx  sitemap.ts  theme-providers.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: hello.rs  main.rs
common/: Subscription.ts  constants.ts  utils.ts
components/: AddNodeBtn.tsx  Analytics.tsx  Bullet.tsx  Comments.tsx  ConnectButton.tsx  DatabaseList.tsx  DeleteConfirmDialog.tsx  FileUpload.tsx  Footer.tsx  Gate.tsx  GoogleOauthButton.tsx  Header.tsx  InitBuySellDialog.tsx  Kbd.tsx  Link.tsx  LoginButton.tsx  Logo.tsx  MemberList.tsx  MobileNav.tsx  ModeToggle.tsx  NavbarWrapper.tsx  NodesProvider.tsx  NumberInput.tsx  OptionTag.tsx  PageList.tsx  PostList.tsx  PrivyWagmiProvider.tsx  PublishPopover.tsx  ReownWagmiProvider.tsx  ScrollTopAndComment.tsx  SocialNav.tsx  (+12 more)
(+3040 files in other folders)
