[package]
name = "app"
version = "0.3.0"
description = "Your personal database"
authors = ["0xZion"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.66"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
actix-web = "4"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = [
  "shell-open",
  "fs-all",
  "http-all",
  "macos-private-api",
  "window-show",
  "window-set-size",
  "path-all",
  "window-center",
  "global-shortcut-all",
  "protocol-asset",
  "window-set-focus",
  "window-hide",
  "window-set-skip-taskbar",
  "system-tray",
] }
tauri-plugin-clipboard = "0.6.10"


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
